# api-gateway

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py  gateway.py
app/api/routers/: __init__.py  admin.py  auth.py  monitoring.py  services.py
app/core/: config.py  errors.py  logging.py  security.py
app/db/: mongodb.py  postgres.py  redis_client.py
app/middleware/: authentication.py  logging.py  rate_limiting.py
app/models/: api_key.py  request_log.py  service.py  user.py
app/schemas/: auth.py  log.py  service.py  user.py
app/schemas/utils/: pagination.py
app/services/: auth.py  log_service.py  proxy.py  rate_limit.py  service.py
migrations/: env.py
migrations/versions/: 5f37ade049f9_add_admin_user.py  fc830860648d_initial_schema.py
tests/: conftest.py  test_admin.py  test_auth.py  test_services.py
